adding organisation section to home page

--- a/index.html
+++ b/index.html
@@ -807,8 +807,10 @@
 		<section class="bg-body-secondar py-6">
 			<div class="container">
 				<div class=" text-start mb-4 mb-sm-6">
-					<h2 class=" p-0 fs-3 text-center text-primary-pro w-75 mx-auto"><span class="text-primary-pro fw-bolder">Pro<span class="text-danger" >DWEx</span>&nbsp;</span>Member Institutions</h2>
-					<p class="mb-0 p-0 text-center pb-7">ProDWEx now has Members in 154 Institutions</p>
+					<h2 class=" p-0 fs-3 text-center text-primary-pro w-75 mx-auto"><span class="text-primary-pro fw-bolder">Pro<span class="text-danger" >DWEx</span>&nbsp;</span>Partnerships & Member Institutions</h2>
+					<p class="mb-0 p-0 text-center pb-7 small px-9">At ProDWex, we join forces with top universities, tech innovators, and non profits to deliver hands on training, expert
+					mentorship, and real world internships. Our collaborative approach ensures every participant gains in‑demand skills,
+					professional certifications, and a network of industry connections ready to excel from day one.</p>
 				</div>
 			
 				<!-- Institution item START 1 -->
@@ -968,6 +970,95 @@
 				<!-- Feature item END -->
 			</div>
 		</section>
+
+
+<section class="container">
+
+		<div class="row row-cols-1 row-cols-md-2 align-items-md-center g-5 py-5">
+			<div class="col d-flex flex-column align-items-start gap-2">
+				<h2 class="fw-bold text-primary-pro">Empowering Africa’s <span class="text-danger">Talent</span> Through Strategic <span class="text-danger">Partnerships</span></h2>
+				<p class="text-body-secondary">We proudly collaborate with forward-thinking organizations to deliver impactful training, mentorship, and hands-on
+				experience to young professionals across Africa.</p> <a href="#"
+					class="btn btn-small btn-primary">Primary button</a>
+			</div>
+			<div class="col">
+				<div class="row row-cols-1 row-cols-sm-2 g-4 org-scroll">
+					<div class="col d-flex flex-column gap-2">
+						<div
+							class="feature-icon-small d-inline-flex align-items-center justify-content-center text-bg-primary bg-gradient fs-4 rounded-3">
+							<svg class="bi" width="1em" height="1em" aria-hidden="true">
+								<use xlink:href="#collection"></use>
+							</svg> </div>
+						<h4 class="fw-semibold mb-0 text-body-emphasis">Featured title</h4>
+						<p class="text-body-secondary">Paragraph of text beneath the heading to explain the heading.</p>
+					</div>
+					<div class="col d-flex flex-column gap-2">
+						<div
+							class="feature-icon-small d-inline-flex align-items-center justify-content-center text-bg-primary bg-gradient fs-4 rounded-3">
+							<svg class="bi" width="1em" height="1em" aria-hidden="true">
+								<use xlink:href="#gear-fill"></use>
+							</svg> </div>
+						<h4 class="fw-semibold mb-0 text-body-emphasis">Featured title</h4>
+						<p class="text-body-secondary">Paragraph of text beneath the heading to explain the heading.</p>
+					</div>
+					<div class="col d-flex flex-column gap-2">
+						<div
+							class="feature-icon-small d-inline-flex align-items-center justify-content-center text-bg-primary bg-gradient fs-4 rounded-3">
+							<svg class="bi" width="1em" height="1em" aria-hidden="true">
+								<use xlink:href="#speedometer"></use>
+							</svg> </div>
+						<h4 class="fw-semibold mb-0 text-body-emphasis">Featured title</h4>
+						<p class="text-body-secondary">Paragraph of text beneath the heading to explain the heading.</p>
+					</div>
+					<div class="col d-flex flex-column gap-2">
+						<div
+							class="feature-icon-small d-inline-flex align-items-center justify-content-center text-bg-primary bg-gradient fs-4 rounded-3">
+							<svg class="bi" width="1em" height="1em" aria-hidden="true">
+								<use xlink:href="#table"></use>
+							</svg> </div>
+						<h4 class="fw-semibold mb-0 text-body-emphasis">Featured title</h4>
+						<p class="text-body-secondary">Paragraph of text beneath the heading to explain the heading.</p>
+					</div>
+					<div class="col d-flex flex-column gap-2">
+						<div
+							class="feature-icon-small d-inline-flex align-items-center justify-content-center text-bg-primary bg-gradient fs-4 rounded-3">
+							<svg class="bi" width="1em" height="1em" aria-hidden="true">
+								<use xlink:href="#speedometer"></use>
+							</svg> </div>
+						<h4 class="fw-semibold mb-0 text-body-emphasis">Featured title</h4>
+						<p class="text-body-secondary">Paragraph of text beneath the heading to explain the heading.</p>
+					</div>
+					<div class="col d-flex flex-column gap-2">
+						<div
+							class="feature-icon-small d-inline-flex align-items-center justify-content-center text-bg-primary bg-gradient fs-4 rounded-3">
+							<svg class="bi" width="1em" height="1em" aria-hidden="true">
+								<use xlink:href="#table"></use>
+							</svg> </div>
+						<h4 class="fw-semibold mb-0 text-body-emphasis">Featured title</h4>
+						<p class="text-body-secondary">Paragraph of text beneath the heading to explain the heading.</p>
+					</div>
+					<div class="col d-flex flex-column gap-2">
+						<div
+							class="feature-icon-small d-inline-flex align-items-center justify-content-center text-bg-primary bg-gradient fs-4 rounded-3">
+							<svg class="bi" width="1em" height="1em" aria-hidden="true">
+								<use xlink:href="#speedometer"></use>
+							</svg> </div>
+						<h4 class="fw-semibold mb-0 text-body-emphasis">Featured title</h4>
+						<p class="text-body-secondary">Paragraph of text beneath the heading to explain the heading.</p>
+					</div>
+					<div class="col d-flex flex-column gap-2">
+						<div
+							class="feature-icon-small d-inline-flex align-items-center justify-content-center text-bg-primary bg-gradient fs-4 rounded-3">
+							<svg class="bi" width="1em" height="1em" aria-hidden="true">
+								<use xlink:href="#table"></use>
+							</svg> </div>
+						<h4 class="fw-semibold mb-0 text-body-emphasis">Featured title</h4>
+						<p class="text-body-secondary">Paragraph of text beneath the heading to explain the heading.</p>
+					</div>
+				</div>
+			</div>
+		</div>
+	</section >
 
 		<section class="py-5 Services">
 			<div class="album">
